--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "lib": ["es2017", "dom"],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
-    "baseUrl": ".",
+    "baseUrl": "",
     "paths": {}
   },
   "exclude": ["node_modules", "tmp"]
