--- a/package.json
+++ b/package.json
@@ -43,24 +43,25 @@
     "zone.js": "^0.9.1"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^0.800.1",
     "@angular/cli": "8.1.1",
-    "@nrwl/workspace": "8.4.4",
-    "@types/node": "~8.9.4",
-    "dotenv": "6.2.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.4.5",
-    "prettier": "1.16.4",
     "@angular/compiler-cli": "^8.0.0",
     "@angular/language-service": "^8.0.0",
-    "@angular-devkit/build-angular": "^0.800.1",
-    "codelyzer": "~5.0.1",
-    "jest-preset-angular": "7.0.0",
+    "@nrwl/cypress": "8.4.4",
     "@nrwl/jest": "8.4.4",
-    "jest": "24.1.0",
+    "@nrwl/workspace": "8.4.4",
     "@types/jest": "24.0.9",
+    "@types/node": "~8.9.4",
+    "codelyzer": "~5.0.1",
+    "cypress": "^3.4.1",
+    "dotenv": "6.2.0",
+    "jest": "24.1.0",
+    "jest-preset-angular": "^7.1.1",
+    "json-server-auth": "^1.2.1",
+    "prettier": "1.16.4",
     "ts-jest": "24.0.0",
-    "cypress": "3.4.0",
-    "@nrwl/cypress": "8.4.4"
+    "ts-node": "~7.0.0",
+    "tslint": "~5.11.0",
+    "typescript": "~3.4.5"
   }
 }
