login logout features

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "update:check": "ng update",
     "workspace-schematic": "nx workspace-schematic",
     "dep-graph": "nx dep-graph",
-    "help": "nx help"
+    "help": "nx help",
+    "json-server": "json-server-auth db.json"
   },
   "private": true,
   "dependencies": {
